--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.0",
     "phantomjs-prebuilt": "^2.1.7",
+    "karma-coverage": "^0.5.3",
+    "karma-mocha-reporter":"^1.2.3",
+    "mocha":"^2.4.5",
     "shelljs": "^0.3.0"
   },
   "cordovaPlugins": [
