--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^1.0.1",
+    "karma-coverage": "^1.0.0",
     "karma-firefox-launcher": "^1.0.0",
     "karma-jasmine": "^1.0.2",
+    "karma-mocha": "^1.0.1",
+    "karma-mocha-reporter": "^2.0.4",
     "karma-phantomjs-launcher": "^1.0.0",
+    "mocha": "^2.5.3",
     "phantomjs-prebuilt": "^2.1.7",
-    "karma-coverage": "^0.5.3",
-    "karma-mocha-reporter":"^1.2.3",
-    "mocha":"^2.4.5",
     "shelljs": "^0.3.0"
   },
   "cordovaPlugins": [
