--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "moment": "^2.13.0"
   },
   "devDependencies": {
+    "angular-mocks": "^1.5.7",
     "bower": "^1.3.3",
     "gulp-util": "^2.2.14",
     "jasmine-core": "^2.4.1",
